crates/language-v2/tests/src/fail/p0_parsing/unrecognized_field/test.stderr
error: unexpected token, expected `)`
  --> src/fail/p0_parsing/unrecognized_field/test.rs:19:17
   |
19 |                 unrecognized_field = true
   |                 ^^^^^^^^^^^^^^^^^^
